--- a/index.html
+++ b/index.html
@@ -4,9 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Welcome to fast Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+        <h1 id="welcome" >My Website</h1>
+        <h2 >Hi I Am Mahed</h2>
+        <p>Bangladesh (“Land of the Bengals”) is one of the most densely populated countries in the world, and its people are predominantly Muslim. As the eastern portion of the historical region of Bengal, the area once formed, along with what is now the Indian state of West Bengal, the province of Bengal in British India. With the partition of India in 1947, it became the Pakistani province of East Bengal (later renamed East Pakistan), one of five provinces of Pakistan, separated from the other four by 1,100 miles (1,800 km) of Indian territory. In 1971 it became the independent country of Bangladesh, with its capital at Dhaka.</p>
+        <a target="_blank" class="button" href="https://en.wikipedia.org/wiki/Bangladesh">See More</a>
+       </div>
+       <div id="bd" class="half-width">
+        <img src="image/bd.png" alt="">
+       </div>
+    </section>
+    <section class="secend-banner">
+        <div id="bd2" class="half-width">
+            <img src="image/bd2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Bogura</h2>
+            <h3>wikipedia</h3>
+            <p>Bogra (Bengali: বগুড়া), officially known as Bogura,[1] is a major city located in Bogra District, Rajshahi Division, Bangladesh. The city is a major commercial hub in Northern Bangladesh. It is the second largest city in Rajshahi Division with a population of over 1.2 million residents. The Bogra bridge connects the Rajshahi Division and Rangpur Division.[2] </p>
+            <a target="_blank" class="button" href="https://en.wikipedia.org/wiki/bogura">See More</a>
+        </div>
+    </section>
+    <section class="experiance">
+        <div id="up-stack" class="half-width singel-experience">
+            <h2>Full Stack web dev</h2>
+            <h3>2021 - present | pro beveloper</h3>
+            <p>Bogra (Bengali: বগুড়া), officially known as Bogura,[1] is a major city located in Bogra District, Rajshahi Division, Bangladesh. The city is a major commercial hub in Northern Bangladesh. It is the second largest city in Rajshahi Division with a population of over 1.2 million residents. The Bogra bridge connects the Rajshahi Division and Rangpur Divisio </p>
+
+        </div>
+        <div id="full-stack" class="half-width singel-experience">
+
+            <h2>Full Stack web dev</h2>
+
+            <h3>2021 - present | pro beveloper</h3>
+
+            <p>Bogra (Bengali: বগুড়া), officially known as Bogura,[1] is a major city located in Bogra District, Rajshahi Division, Bangladesh. The city is a major commercial hub in Northern Bangladesh. It is the second largest city in Rajshahi Division with a population of over 1.2 million residents. The Bogra bridge connects the Rajshahi Division and Rangpur Divisio </p>
+
+
+        </div>
+    </section>
+    <footer>
+        <p>@ Mahed 2022 , a Programing Hero initialive</p>
+    </footer>
+   
 </body>
 </html>
